--- a/app/src/main/res/layout-xhdpi/activity_remote_main_new.xml
+++ b/app/src/main/res/layout-xhdpi/activity_remote_main_new.xml
@@ -30,7 +30,7 @@
         android:id="@+id/remote_new_lay_one"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone" >
+        android:visibility="visible" >
 
         <ImageView
             android:id="@+id/img_center"
