--- a/app/src/main/res/layout/activity_career_main.xml
+++ b/app/src/main/res/layout/activity_career_main.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/layout_background" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/layout_background"
+    >
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_above="@+id/line3"
-        android:layout_alignParentTop="true" >
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:id="@+id/top"
@@ -25,7 +26,7 @@
                 android:paddingBottom="10dip"
                 android:paddingLeft="10dip"
                 android:paddingRight="20dip"
-                android:paddingTop="20dip" >
+                android:paddingTop="20dip">
 
                 <TextView
                     android:id="@+id/domay_txt_topTemputre"
@@ -34,22 +35,22 @@
                     android:layout_marginTop="5dp"
                     android:text="--℃"
                     android:textColor="#666666"
-                    android:textSize="27sp" />
+                    android:textSize="27sp"/>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/domay_txt_topCity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="15dp"
                         android:text="北京市"
                         android:textColor="#666666"
-                        android:textSize="14sp" 
-                        android:layout_marginRight="15dp"/>
+                        android:textSize="14sp"/>
 
                     <TextView
                         android:id="@+id/domay_txt_topWeather"
@@ -57,7 +58,7 @@
                         android:layout_height="wrap_content"
                         android:text="--"
                         android:textColor="#666666"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"/>
                 </LinearLayout>
 
                 <TextView
@@ -66,42 +67,36 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="1dp"
                     android:textColor="#666666"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"/>
 
                 <TextView
                     android:id="@+id/domay_txt_carLog"
                     android:layout_width="95.5dp"
                     android:layout_height="32dp"
                     android:layout_marginTop="15dp"
-                    android:background="@drawable/domay_car_log_bg_selector" />
+                    android:background="@drawable/domay_car_log_bg_selector"/>
             </LinearLayout>
 
             <include
-                android:layout_width="match_parent"
-                android:layout_height="245dp"
-                android:layout_marginTop="12dp"
                 layout="@layout/sesame_layout_report_grid"
-                android:background="@color/white" />
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="12dp"
+                android:layout_weight="1"/>
         </LinearLayout>
     </ScrollView>
 
-    <View
-        android:id="@+id/line3"
-        style="@style/line_h"
-        android:layout_above="@+id/activity_career_main_relative2"
-        android:layout_marginTop="12dp"
-        android:visibility="gone" />
-
     <RelativeLayout
         android:id="@+id/activity_career_main_relative2"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_alignParentBottom="true"
         android:background="@color/white"
         android:paddingBottom="10dp"
         android:paddingLeft="20dip"
         android:paddingRight="20dip"
-        android:paddingTop="10dip" >
+        android:paddingTop="10dip">
 
         <ImageView
             android:id="@+id/activity_career_main_img1"
@@ -110,7 +105,7 @@
             android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dip"
-            android:src="@drawable/icon_secretary" />
+            android:src="@drawable/icon_secretary"/>
 
         <TextView
             android:id="@+id/activity_career_main_txt2"
@@ -122,7 +117,7 @@
             android:layout_toRightOf="@id/activity_career_main_img1"
             android:text="芝麻小秘书 :"
             android:textColor="@color/text_color_gray3"
-            android:textSize="@dimen/text_size_middle1" />
+            android:textSize="@dimen/text_size_middle1"/>
 
         <TextView
             android:id="@+id/activity_career_main_txt3"
@@ -135,7 +130,7 @@
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="@dimen/text_size_small_s2"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -143,14 +138,14 @@
             android:layout_alignBottom="@+id/activity_career_main_img1"
             android:layout_below="@+id/activity_career_main_txt2"
             android:layout_toRightOf="@+id/activity_career_main_img1"
-            android:gravity="center_vertical" >
+            android:gravity="center_vertical">
 
             <ImageView
                 android:id="@+id/horn_img"
                 style="@style/public_img"
                 android:layout_marginRight="4dip"
                 android:layout_marginTop="3dp"
-                android:src="@drawable/sesame_icon_horn" />
+                android:src="@drawable/sesame_icon_horn"/>
 
             <TextView
                 android:id="@+id/activity_career_main_txt4"
@@ -162,7 +157,7 @@
                 android:singleLine="true"
                 android:text=""
                 android:textColor="@color/text_color_gray1"
-                android:textSize="@dimen/text_size_small_s2" />
+                android:textSize="@dimen/text_size_small_s2"/>
         </LinearLayout>
     </RelativeLayout>
 
