--- a/app/src/main/res/layout-xhdpi/sesame_layout_report_grid.xml
+++ b/app/src/main/res/layout-xhdpi/sesame_layout_report_grid.xml
@@ -1,109 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:paddingBottom="21dp"
-    android:paddingTop="21dp" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:gravity="center_vertical"
+                android:paddingBottom="20dp"
+                android:paddingTop="15dp">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" >
+    <TextView
+        android:id="@+id/line1"
+        style="@style/line_v"
+        android:layout_centerHorizontal="true"
+        android:background="@color/transparent"/>
+
+    <LinearLayout
+        android:id="@+id/layout_report_grid_linear1"
+        style="@style/layout_report_grid_layout"
+        android:layout_marginTop="28dp"
+        android:layout_toLeftOf="@id/line1">
+
+        <ImageView
+            android:id="@+id/layout_report_grid_img1"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/sesame_icon_time_bg"/>
 
         <TextView
-            android:id="@+id/line1"
-            style="@style/line_v"
-            android:layout_centerHorizontal="true"
-            android:background="@color/transparent" />
+            android:id="@+id/layout_report_grid_linear1_txt2"
+            style="@style/sesame_layout_report_grid_txt2"/>
 
-        <LinearLayout
-            android:id="@+id/layout_report_grid_linear1"
-            style="@style/layout_report_grid_layout"
-            android:layout_toLeftOf="@id/line1" >
+        <TextView
+            android:id="@+id/layout_report_grid_linear1_txt1"
+            style="@style/sesame_layout_report_grid_txt1"
+            android:text="行驶时间(小时)"/>
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/layout_report_grid_img1"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:background="@drawable/sesame_icon_time_bg" />
+    <LinearLayout
+        android:id="@+id/layout_report_grid_linear2"
+        style="@style/layout_report_grid_layout"
+        android:layout_marginTop="28dp"
+        android:layout_toRightOf="@id/line1">
 
-            <TextView
-                android:id="@+id/layout_report_grid_linear1_txt2"
-                style="@style/sesame_layout_report_grid_txt2" />
+        <ImageView
+            android:id="@+id/layout_report_grid_img2"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/icon_mileage_bg"/>
 
-            <TextView
-                android:id="@+id/layout_report_grid_linear1_txt1"
-                style="@style/sesame_layout_report_grid_txt1"
-                android:text="行驶时间(小时)" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/layout_report_grid_linear2_txt2"
+            style="@style/sesame_layout_report_grid_txt2"/>
 
-        <LinearLayout
-            android:id="@+id/layout_report_grid_linear2"
-            style="@style/layout_report_grid_layout"
-            android:layout_toRightOf="@id/line1" >
+        <TextView
+            android:id="@+id/layout_report_grid_linear2_txt1"
+            style="@style/sesame_layout_report_grid_txt1"
+            android:text="总里程(公里)"/>
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/layout_report_grid_img2"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:background="@drawable/icon_mileage_bg" />
+    <LinearLayout
+        android:id="@+id/layout_report_grid_linear3"
+        style="@style/layout_report_grid_layout"
+        android:layout_below="@id/layout_report_grid_linear2"
+        android:layout_marginBottom="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_toLeftOf="@id/line1">
 
-            <TextView
-                android:id="@+id/layout_report_grid_linear2_txt2"
-                style="@style/sesame_layout_report_grid_txt2" />
+        <ImageView
+            android:id="@+id/layout_report_grid_img3"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/sesame_icon_speed_bg"/>
 
-            <TextView
-                android:id="@+id/layout_report_grid_linear2_txt1"
-                style="@style/sesame_layout_report_grid_txt1"
-                android:text="总里程(公里)" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/layout_report_grid_linear3_txt2"
+            style="@style/sesame_layout_report_grid_txt2"/>
 
-        <LinearLayout
-            android:id="@+id/layout_report_grid_linear3"
-            style="@style/layout_report_grid_layout"
-            android:layout_below="@id/layout_report_grid_linear2"
-            android:layout_marginTop="25dp"
-            android:layout_toLeftOf="@id/line1" >
+        <TextView
+            android:id="@+id/layout_report_grid_linear3_txt1"
+            style="@style/sesame_layout_report_grid_txt1"
+            android:text="平均速度(公里/小时)"/>
+    </LinearLayout>
 
-            <ImageView
-                android:id="@+id/layout_report_grid_img3"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:background="@drawable/sesame_icon_speed_bg" />
+    <LinearLayout
+        android:id="@+id/layout_report_grid_linear4"
+        style="@style/layout_report_grid_layout"
+        android:layout_below="@id/layout_report_grid_linear2"
+        android:layout_marginBottom="25dp"
+        android:layout_marginTop="25dp"
+        android:layout_toRightOf="@id/line1">
 
-            <TextView
-                android:id="@+id/layout_report_grid_linear3_txt2"
-                style="@style/sesame_layout_report_grid_txt2" />
+        <ImageView
+            android:id="@+id/layout_report_grid_img4"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:background="@drawable/sesame_icon_ranking_bg"/>
 
-            <TextView
-                android:id="@+id/layout_report_grid_linear3_txt1"
-                style="@style/sesame_layout_report_grid_txt1"
-                android:text="平均速度(公里/小时)" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/layout_report_grid_linear4_txt2"
+            style="@style/sesame_layout_report_grid_txt2"/>
 
-        <LinearLayout
-            android:id="@+id/layout_report_grid_linear4"
-            style="@style/layout_report_grid_layout"
-            android:layout_below="@id/layout_report_grid_linear2"
-            android:layout_marginTop="25dp"
-            android:layout_toRightOf="@id/line1" >
-
-            <ImageView
-                android:id="@+id/layout_report_grid_img4"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:background="@drawable/sesame_icon_ranking_bg" />
-
-            <TextView
-                android:id="@+id/layout_report_grid_linear4_txt2"
-                style="@style/sesame_layout_report_grid_txt2" />
-
-            <TextView
-                android:id="@+id/layout_report_grid_linear4_txt1"
-                style="@style/sesame_layout_report_grid_txt1"
-                android:text="百公里电耗(千瓦时)" />
-        </LinearLayout>
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/layout_report_grid_linear4_txt1"
+            style="@style/sesame_layout_report_grid_txt1"
+            android:text="百公里电耗(千瓦时)"/>
+    </LinearLayout>
 
 </RelativeLayout>
