--- a/app/src/main/res/layout/activity_career_main.xml
+++ b/app/src/main/res/layout/activity_career_main.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/layout_background"
-    >
+                android:layout_height="match_parent"
+                android:background="@color/layout_background">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -16,73 +15,78 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/top"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="172dp"
-                android:background="@drawable/domay_top_bg"
-                android:baselineAligned="false"
-                android:orientation="vertical"
-                android:paddingBottom="10dip"
-                android:paddingLeft="10dip"
-                android:paddingRight="20dip"
-                android:paddingTop="20dip">
-
-                <TextView
-                    android:id="@+id/domay_txt_topTemputre"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:text="--℃"
-                    android:textColor="#666666"
-                    android:textSize="27sp"/>
+                android:layout_height="175dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:orientation="horizontal">
+                    android:id="@+id/top"
+                    android:layout_width="match_parent"
+                    android:layout_height="172dp"
+                    android:background="@drawable/domay_top_bg"
+                    android:baselineAligned="false"
+                    android:orientation="vertical"
+                    android:paddingBottom="10dip"
+                    android:paddingLeft="10dip"
+                    android:paddingRight="20dip"
+                    android:paddingTop="20dip">
 
                     <TextView
-                        android:id="@+id/domay_txt_topCity"
+                        android:id="@+id/domay_txt_topTemputre"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="15dp"
-                        android:text="北京市"
+                        android:layout_marginTop="5dp"
+                        android:text="--℃"
+                        android:textColor="#666666"
+                        android:textSize="27sp"/>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/domay_txt_topCity"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginRight="15dp"
+                            android:text="北京市"
+                            android:textColor="#666666"
+                            android:textSize="14sp"/>
+
+                        <TextView
+                            android:id="@+id/domay_txt_topWeather"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="--"
+                            android:textColor="#666666"
+                            android:textSize="14sp"/>
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/domay_txt_topDate"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="1dp"
                         android:textColor="#666666"
                         android:textSize="14sp"/>
 
                     <TextView
-                        android:id="@+id/domay_txt_topWeather"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="--"
-                        android:textColor="#666666"
-                        android:textSize="14sp"/>
+                        android:id="@+id/domay_txt_carLog"
+                        android:layout_width="96dp"
+                        android:layout_height="32dp"
+                        android:layout_marginTop="15dp"
+                        android:background="@drawable/domay_car_log_bg_selector"/>
                 </LinearLayout>
-
-                <TextView
-                    android:id="@+id/domay_txt_topDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="1dp"
-                    android:textColor="#666666"
-                    android:textSize="14sp"/>
-
-                <TextView
-                    android:id="@+id/domay_txt_carLog"
-                    android:layout_width="95.5dp"
-                    android:layout_height="32dp"
-                    android:layout_marginTop="15dp"
-                    android:background="@drawable/domay_car_log_bg_selector"/>
-            </LinearLayout>
+            </RelativeLayout>
 
             <include
                 layout="@layout/sesame_layout_report_grid"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="10dp"
                 android:layout_weight="1"/>
         </LinearLayout>
     </ScrollView>
