--- a/app/src/main/res/layout/activity_car_state_now.xml
+++ b/app/src/main/res/layout/activity_car_state_now.xml
@@ -12,8 +12,12 @@
     <com.carlt.doride.ui.pull.PullToRefreshListView
         android:id="@+id/activity_car_condition_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:background="@color/white"
-        android:paddingTop="10dp"/>
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:paddingTop="10dp"
+
+      />
 
 </LinearLayout>
