--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,6 @@
     <dimen name="text_size_small">16sp</dimen>
     <dimen name="text_size_small_s1">14sp</dimen>
     <dimen name="list_divider_height">10dp</dimen>
+    <dimen name="list_divider_height2">0dp</dimen>
     <dimen name="head_height">44dp</dimen>
 </resources>
