1，修复选择购车日期为“--”时crash的bug 2，修改多次频繁提示吐司时不显示的bug

--- a/app/src/main/res/layout/activity_reset_login_passwd.xml
+++ b/app/src/main/res/layout/activity_reset_login_passwd.xml
@@ -22,7 +22,7 @@
             android:focusableInTouchMode="true"
             android:focusable="true"
             android:gravity="center_vertical"
-            android:hint="@string/usercenter_hint_phone2"
+            android:hint="请输入原登录密码"
             android:inputType="textPassword"
             android:digits="@string/pwd_filter_input_string"
             android:maxLength="32" />
