更换芝麻,设置车辆管理 icon 错误

--- a/app/src/main/res/layout/sesame_activity_setting_main.xml
+++ b/app/src/main/res/layout/sesame_activity_setting_main.xml
@@ -151,7 +151,7 @@
                     android:id="@+id/img2"
                     style="@style/setting_img1"
                     android:layout_centerVertical="true"
-                    android:src="@mipmap/account_security"/>
+                    android:src="@mipmap/icon_car_manager"/>
 
                 <TextView
                     style="@style/setting_txt"
