--- a/app/src/main/res/layout/activity_career_main.xml
+++ b/app/src/main/res/layout/activity_career_main.xml
@@ -6,13 +6,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/line3"
-        android:layout_alignParentTop="true">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/activity_career_main_relative2"
+        android:layout_marginBottom="10dp"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -84,10 +85,10 @@
             <include
                 layout="@layout/sesame_layout_report_grid"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
                 android:layout_marginTop="10dp"
-                android:layout_weight="1"/>
+              />
         </LinearLayout>
     </ScrollView>
 
