添加大乘远程操作 下拉加载,以及界面修改

--- a/app/src/main/res/layout/sesame_activity_setting_main.xml
+++ b/app/src/main/res/layout/sesame_activity_setting_main.xml
@@ -243,7 +243,9 @@
             <View
                 android:id="@+id/line_h4"
                 style="@style/setting_line_h"
-                android:layout_below="@id/activity_setting_layout4"/>
+                android:layout_below="@id/activity_setting_layout4"
+                android:visibility="gone"
+                />
 
             <RelativeLayout
                 android:id="@+id/activity_setting_layout5"
