--- a/app/src/main/res/layout/activity_remote_log.xml
+++ b/app/src/main/res/layout/activity_remote_log.xml
@@ -8,12 +8,11 @@
     <com.carlt.doride.ui.pull.PullToRefreshListView
         android:id="@+id/remotelog_list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:divider="@color/transparent"
-        android:layout_marginTop="10dp"
+        android:layout_height="match_parent"
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:paddingTop="10dp"
+
       >
 
     </com.carlt.doride.ui.pull.PullToRefreshListView>
