--- a/app/src/main/res/layout/list_item_remotelog.xml
+++ b/app/src/main/res/layout/list_item_remotelog.xml
@@ -55,6 +55,8 @@
         android:layout_marginTop="8dp"
         android:layout_width="match_parent"
         android:layout_height="1dip"
-        android:background="@color/text_color_gray4"/>
+        android:background="@color/text_color_gray4"
+        android:visibility="gone"
+        />
 </RelativeLayout>
 
