1，修复部分bug 2，加上芝麻冻结账户逻辑

--- a/app/src/main/res/layout-xhdpi/sesame_dialog_air_condition.xml
+++ b/app/src/main/res/layout-xhdpi/sesame_dialog_air_condition.xml
@@ -131,7 +131,7 @@
         android:layout_height="wrap_content"
         android:numColumns="3"
         android:padding="15dp"
-        android:scrollbars="@null"
+        android:scrollbars="none"
         android:visibility="visible"
         android:verticalSpacing="6dp" />
 
