--- a/app/src/main/res/layout-xhdpi/sesame_list_item_secretary_types.xml
+++ b/app/src/main/res/layout-xhdpi/sesame_list_item_secretary_types.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:background="@color/white"
     android:paddingLeft="30dip" >
 
@@ -15,6 +15,7 @@
         android:layout_marginTop="20dp" />
 
     <RelativeLayout
+        android:id="@+id/rl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
@@ -62,9 +63,9 @@
         android:background="@drawable/arrow_right2" />
 
     <View
+        android:layout_below="@+id/rl"
         android:id="@+id/line"
         style="@style/line_h"
-        android:layout_alignParentBottom="true"
         android:layout_marginRight="30dp" />
 
 </RelativeLayout>
