--- a/app/src/main/res/layout-xhdpi/activity_activate_device.xml
+++ b/app/src/main/res/layout-xhdpi/activity_activate_device.xml
@@ -70,7 +70,7 @@
             android:layout_marginLeft="@dimen/usercenter_margin"
             android:layout_marginRight="@dimen/usercenter_margin"
             android:layout_marginTop="20dip"
-            android:text="激活设备"
+            android:text="激活"
             android:textSize="14dp"/>
     </LinearLayout>
 
