--- a/app/src/main/res/layout-xhdpi/activity_car_test.xml
+++ b/app/src/main/res/layout-xhdpi/activity_car_test.xml
@@ -33,7 +33,7 @@
         android:visibility="gone" >
 
         <TextView
-            android:id="@+id/ activity_car_test_txt"
+            android:id="@+id/activity_car_test_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="6dip"
