--- a/app/src/main/res/layout-xhdpi/activity_career_secretary_new.xml
+++ b/app/src/main/res/layout-xhdpi/activity_career_secretary_new.xml
@@ -39,11 +39,10 @@
 
     <ListView
         android:id="@+id/activity_career_secretary_list"
-        style="@style/public_listView"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/activity_career_secretary_lay"
         android:background="@color/white"
-        android:dividerHeight="0dip" />
+        android:divider="@null"
+        android:layout_below="@id/activity_career_secretary_lay"/>
 
 </RelativeLayout>
