--- a/app/src/main/res/layout/activity_log_detail.xml
+++ b/app/src/main/res/layout/activity_log_detail.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.carlt.sesame.ui.activity.setting.UpdataDetailActivity">
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/activity_log_detail_lv"
