--- a/app/src/main/res/layout/activity_up_date.xml
+++ b/app/src/main/res/layout/activity_up_date.xml
@@ -38,8 +38,8 @@
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/gray"
-        android:textSize="11dp"
+        android:textColor="@color/transparent_half"
+        android:textSize="12dp"
         app:layout_constraintTop_toBottomOf="@id/updata_tv"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
