--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,12 @@
     <dimen name="list_divider_height">10dp</dimen>
     <dimen name="list_divider_height2">0dp</dimen>
     <dimen name="head_height">44dp</dimen>
+
+
+    <dimen name="small">5dp</dimen>
+    <dimen name="medium">10dp</dimen>
+    <dimen name="normal">15dp</dimen>
+    <dimen name="large">20dp</dimen>
+    <dimen name="xlarge">25dp</dimen>
+    <dimen name="xxlarge">30dp</dimen>
 </resources>
