1，远程启动接口version变更为100 2，调式支付接口

--- a/app/src/main/res/drawable/traffic_remain_txt_color_bg.xml
+++ b/app/src/main/res/drawable/traffic_remain_txt_color_bg.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <corners android:radius="3dp"/>
     <size android:width="10dp" android:height="10dp"/>
-	<solid android:color="#75c3dd"/>
+	<solid android:color="#478cea"/>
 </shape>
