--- a/app/src/main/res/color/background_color.xml
+++ b/app/src/main/res/color/background_color.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_selected="true"
-        android:color="#75c3dd" />
+        android:color="#478cea" />
     <item
         android:state_selected="false"
         android:color="#FFFFFF"/>
