--- a/app/src/main/res/drawable/traffic_used_txt_color_bg.xml
+++ b/app/src/main/res/drawable/traffic_used_txt_color_bg.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <corners android:radius="3dp"/>
     <size android:width="10dp" android:height="10dp"/>
-	<solid android:color="#E2E2E2"/>
+	<solid android:color="#dbdbdb"/>
 </shape>
