--- a/app/src/main/res/layout/activity_activate_bind.xml
+++ b/app/src/main/res/layout/activity_activate_bind.xml
@@ -35,6 +35,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dip"
         android:paddingLeft="12dp"
+        android:visibility="gone"
         android:paddingRight="12dp"
         android:text="@string/device_activate_tip2"
         android:textColor="@color/text_color_gray2"
