1，修复行车月报展示错误bug421

--- a/app/src/main/res/layout/layout_secretary_report_table.xml
+++ b/app/src/main/res/layout/layout_secretary_report_table.xml
@@ -13,7 +13,7 @@
         android:id="@+id/text_title2"
         style="@style/secretary_report_txt1"
         android:layout_centerHorizontal="true"
-        android:text="油耗" />
+        android:text="电耗" />
 
     <TextView
         android:id="@+id/text_title1"
@@ -75,7 +75,7 @@
         style="@style/secretary_report_txt3"
         android:layout_below="@id/line2"
         android:layout_toLeftOf="@id/text_title5"
-        android:text="平均油耗" />
+        android:text="平均电耗" />
 
     <TextView
         android:id="@+id/text_title6"
