1.  芝麻E02 新能源汽车取消 "芝麻"字眼；芝麻小秘书，改为，小秘书；
2. 当车辆正在充电时，车辆状态为：您的爱车正在充电；

3. 新能源车型的 首页（背景图、车模图）、座驾（背景图、车模图）、远程（车模图）走后台配置，从配置中获取；

--- a/app/src/main/res/layout-xhdpi/activity_remote_main_new.xml
+++ b/app/src/main/res/layout-xhdpi/activity_remote_main_new.xml
@@ -37,6 +37,7 @@
             android:layout_width="249dp"
             android:layout_height="331dp"
             android:layout_alignParentRight="true"
+            android:scaleType="fitXY"
             android:layout_centerInParent="true"
             android:src="@drawable/remote_new_bg" />
 
