--- a/app/src/main/res/layout-xhdpi/activity_car_main.xml
+++ b/app/src/main/res/layout-xhdpi/activity_car_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         >
         <ImageView
+            android:id="@+id/ivCarMainBg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@drawable/car_main_bg"
