--- a/app/src/main/res/layout/layout_title.xml
+++ b/app/src/main/res/layout/layout_title.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:background="@color/white"
-    android:layout_height="@dimen/title_height"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/title_height"
+                android:background="@color/white"
+                android:orientation="horizontal"
     >
 
     <ImageView
@@ -13,31 +13,43 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="12dip"
         android:clickable="true"
-        android:src="@drawable/back_bg" />
+        android:src="@drawable/back_bg"/>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="@dimen/title_text_size"
         android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:textColor="@color/black"
+        android:textSize="@dimen/title_text_size"
         />
+
     <TextView
         android:id="@+id/btnOpt"
         android:layout_width="70dp"
         android:layout_height="28dp"
-        android:gravity="center"
-        android:layout_centerInParent="true"
-        android:background="@drawable/verification_send_pressed_no"
-        android:textSize="14sp"
-        android:tag="@string/travel_album_edit"
-        android:layout_marginRight="12dp"
         android:layout_alignParentRight="true"
-        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_marginRight="12dp"
+        android:background="@drawable/verification_send_pressed_no"
+        android:gravity="center"
+        android:tag="@string/travel_album_edit"
+        android:text="@string/travel_album_edit"
         android:textColor="@color/black"
-        android:text="@string/travel_album_edit" />
+        android:textSize="14sp"
+        android:visibility="gone"/>
+
+    <ImageView
+        android:id="@+id/ivHelp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="12dp"
+        android:src="@mipmap/ic_activate_help"
+        android:visibility="gone"/>
+
     <View
         style="@style/line_h"
         android:layout_alignParentBottom="true"
