--- a/app/src/main/res/layout/list_item_loginlog.xml
+++ b/app/src/main/res/layout/list_item_loginlog.xml
@@ -31,6 +31,7 @@
             android:layout_alignBottom="@id/item_loginlog_txt_name"
             android:layout_alignParentRight="true"
             android:text="是否是主机标注"
+            android:visibility="gone"
             android:textColor="@color/text_color_gray1"
             android:textSize="14sp" />
 
