全屏直播，已下载页面crash问题

--- a/app/src/main/res/layout/activity_playback.xml
+++ b/app/src/main/res/layout/activity_playback.xml
@@ -81,7 +81,7 @@
             android:visibility="gone"
             android:src="@drawable/pie_cut_back" />
     
-    <com.linewin.chelepie.ui.view.recorder.ThumbnailView
+    <com.carlt.chelepie.view.ThumbnailView
         android:id="@+id/playback_thumbnailview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
