--- a/app/src/main/res/layout/thumbnail_view.xml
+++ b/app/src/main/res/layout/thumbnail_view.xml
@@ -2,14 +2,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    xmlns:cutseekbar="http://schemas.android.com/apk/com.carlt.chelepie"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/thumbnail_gallery_lay"
         android:layout_width="fill_parent"
         android:layout_height="150dip" >
 
-        <com.linewin.chelepie.ui.view.CoverFlow
+        <com.carlt.chelepie.view.CoverFlow
             android:id="@+id/thumbnail_gallery"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -41,13 +42,13 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="#ffffff"
-        android:visibility="gone" />
-        <!--app:duration="10"-->
-        <!--app:height="47dip"-->
-        <!--app:maxValue="300"-->
-        <!--app:minValue="0"-->
-        <!--app:width="fill_parent" -->
-
+        android:visibility="gone"
+        cutseekbar:duration="10"
+        cutseekbar:height="47dp"
+        cutseekbar:maxValue="300"
+        cutseekbar:minValue="0"
+        cutseekbar:width="fill_parent"
+    />
 
     <SeekBar
         android:id="@+id/thumbnail_seekbar"
