--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,10 @@
 
     </style>
 
+    <style name="Theme.AppCompat.Light.NoActionBar" parent="@style/Theme.AppCompat.Light">
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <!-- 座驾主页面 -->
     <style name="car_main_txt1">
         <item name="android:layout_width">wrap_content</item>
