--- a/app/src/main/res/layout/activity_playback.xml
+++ b/app/src/main/res/layout/activity_playback.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/iv_playback_bg"
+                android:orientation="vertical">
 
     <include
         android:id="@+id/head"
-        layout="@layout/head_recorder" />
+        layout="@layout/head_recorder"/>
 
     <RelativeLayout
         android:id="@+id/head_sub"
@@ -17,7 +18,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="10dip"
         android:background="#b2000000"
-        android:visibility="invisible" >
+        android:visibility="invisible">
 
         <TextView
             android:id="@+id/playback_textday"
@@ -26,7 +27,7 @@
             android:gravity="center"
             android:text="date"
             android:textColor="#ffffff"
-            android:textSize="18sp" />
+            android:textSize="18sp"/>
 
         <ImageView
             android:id="@+id/playback_preday"
@@ -34,7 +35,7 @@
             android:layout_height="fill_parent"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/head_margin_h"
-            android:src="@drawable/playback_preday" />
+            android:src="@drawable/playback_preday"/>
 
         <ImageView
             android:id="@+id/playback_nextday"
@@ -43,7 +44,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="@dimen/head_margin_h"
-            android:src="@drawable/playback_nextday" />
+            android:src="@drawable/playback_nextday"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -53,13 +54,13 @@
         android:layout_alignParentRight="true"
         android:layout_below="@id/head"
         android:layout_margin="10dip"
-        android:layout_marginTop="10dip" >
+        android:layout_marginTop="10dip">
 
         <ImageView
             android:id="@+id/playback_img_handle"
             android:layout_width="35dp"
             android:layout_height="35dp"
-            android:src="@drawable/pie_clip" />
+            android:src="@drawable/pie_clip"/>
 
         <TextView
             android:id="@+id/playback_txt_downloading"
@@ -69,23 +70,24 @@
             android:layout_marginLeft="-10dp"
             android:layout_toRightOf="@+id/playback_img_handle"
             android:background="@drawable/pie_warn"
-            android:visibility="gone" />
+            android:visibility="gone"/>
     </RelativeLayout>
-        <ImageView
-            android:id="@+id/pie_cut_back"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-             android:layout_below="@id/head"
-              android:layout_marginTop="10dip"
-             android:layout_toLeftOf="@id/rl_down_pie"
-            android:visibility="gone"
-            android:src="@drawable/pie_cut_back" />
-    
+
+    <ImageView
+        android:id="@+id/pie_cut_back"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_below="@id/head"
+        android:layout_marginTop="10dip"
+        android:layout_toLeftOf="@id/rl_down_pie"
+        android:src="@drawable/pie_cut_back"
+        android:visibility="gone"/>
+
     <com.carlt.chelepie.view.ThumbnailView
         android:id="@+id/playback_thumbnailview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/head_sub"
-        android:layout_marginBottom="1dip" />
+        android:layout_marginBottom="1dip"/>
 
 </RelativeLayout>
