--- a/app/src/main/res/layout/dialog_notitle.xml
+++ b/app/src/main/res/layout/dialog_notitle.xml
@@ -37,7 +37,9 @@
             android:gravity="center_horizontal"
             android:text="内容2"
             android:textColor="#666666"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+
+            />
     </RelativeLayout>
 
     <View
