修改记录仪时间校对bug,相册下载列表单个删除,Item弹窗UI bug

--- a/app/src/main/res/layout/activity_video_fream.xml
+++ b/app/src/main/res/layout/activity_video_fream.xml
@@ -137,10 +137,10 @@
         android:id="@+id/video_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="返回"
         android:textSize="20dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
+        android:background="@drawable/back_arrow_bg"
 
         />
 </RelativeLayout>
