修改吐司适配下小米,修改相册下载列表删除为空时候的逻辑,更换ImageView错误默认图

--- a/app/src/main/res/layout/item_hasdown.xml
+++ b/app/src/main/res/layout/item_hasdown.xml
@@ -12,7 +12,7 @@
         android:layout_centerVertical="true"
         android:layout_marginRight="13dp"
         android:scaleType="fitXY"
-        android:src="@drawable/car_main_bg" />
+        android:src="@drawable/bg_fullplay" />
 
     <View
         android:id="@+id/hasdown_line_middle"
